--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.6.2",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@types/node": "^14.14.41"
+    "@types/node": "^14.14.41",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "prettier": "2.2.1"
   },
   "scripts": {
+    "lint": "eslint ./",
     "start": "node ./dist/app.js"
   },
   "author": "",
