--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
+    "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
@@ -25,7 +26,7 @@
   },
   "scripts": {
     "lint": "eslint ./",
-    "start": "node ./dist/app.js"
+    "start": "nodemon ./dist/app.js"
   },
   "author": "",
   "license": "ISC"
