--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cron": "^1.8.2",
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
@@ -15,6 +16,7 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@types/cron": "^1.7.2",
     "@types/node": "^14.14.41",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
